--- a/Atividades/Flashcards/index - original sem apple.html
+++ b/Atividades/Flashcards/index - original sem apple.html
@@ -412,60 +412,37 @@
         }
 
         /**
-         * ATUALIZADO: Toca o MP3 imediatamente no clique (iOS-friendly).
-         * Se falhar, tenta após 'loadeddata'; se ainda falhar, cai no TTS.
+         * Tenta tocar o MP3 som{index+1}.mp3; se falhar, usa TTS.
          * onFinish(): callback chamado quando o áudio (ou a fala) TERMINA.
          */
         function playMp3OrSpeak(index, word, buttonElement, level, unit, onFinish) {
             const audioSrc = `../../${level}/${unit}/data1/sounds/som${index + 1}.mp3`;
-
-            // cria o elemento no gesto do usuário
-            const audio = new Audio(audioSrc);
+            const audio = new Audio();
+            audio.src = audioSrc;
             audio.preload = 'auto';
-            audio.playsInline = true; // iOS
-            audio.muted = false;
 
             buttonElement.src = 'pause.png';
 
             let fellBackToTTS = false;
-            let finished = false;
-
-            const cleanup = () => {
-                if (finished) return;
-                finished = true;
-                buttonElement.src = 'businessman.png';
-                if (typeof onFinish === 'function') onFinish();
-            };
 
             const fallbackToTTS = () => {
                 if (fellBackToTTS) return;
                 fellBackToTTS = true;
-                // cancela qualquer tentativa pendente do <audio>
-                try { audio.pause(); } catch(_) {}
-                audio.src = '';
                 toggleSpeech(word, buttonElement, index, onFinish);
             };
 
-            // tenta tocar IMEDIATAMENTE dentro do clique
-            audio.play()
-                .then(() => {
-                    // ok, apenas aguarda o término
-                })
-                .catch(() => {
-                    // se o play imediato falhar, tenta quando carregar algo
-                    const tryAfterLoad = () => {
-                        audio.play().catch(fallbackToTTS);
-                    };
-                    audio.addEventListener('loadeddata', tryAfterLoad, { once: true });
+            audio.oncanplaythrough = () => {
+                audio.play().catch(() => fallbackToTTS());
+            };
 
-                    // timeout curto como último fallback
-                    setTimeout(() => {
-                        if (!finished && audio.paused) fallbackToTTS();
-                    }, 800);
-                });
+            audio.onended = () => {
+                buttonElement.src = 'businessman.png';
+                if (typeof onFinish === 'function') onFinish();
+            };
 
-            audio.onended = cleanup;
-            audio.onerror = fallbackToTTS;
+            audio.onerror = () => {
+                fallbackToTTS();
+            };
         }
 
         // Fala via SpeechSynthesis com marcação de conclusão no onend.
